# ProjectOS

./: .gitignore  AGENTS.md  LICENSE  README.md  RELEASING.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-08-projectos-v1.md
docs/superpowers/specs/: 2026-04-08-projectos-design.md
integrations/claude-mcp/: README.md  pyproject.toml
integrations/claude-mcp/projectos_mcp/: __init__.py  server.py
integrations/claude-skill/: README.md  skill.md
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: activity.rs  comments.rs  github.rs  issues.rs  labels.rs  machines.rs  milestones.rs  mod.rs  projects.rs  search.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/models/: activity.rs  comment.rs  issue.rs  label.rs  machine.rs  milestone.rs  mod.rs  project.rs
src/lib/: commands.ts  events.ts  types.ts
src/lib/components/: ActivityFeed.svelte  CommentThread.svelte  Dashboard.svelte  IssueDetail.svelte  IssueList.svelte  IssueRow.svelte  LabelBadge.svelte  MachineView.svelte  Markdown.svelte  MilestoneBar.svelte  Onboarding.svelte  ProjectView.svelte  QuickCapture.svelte  SearchModal.svelte  Settings.svelte  Sidebar.svelte  StatusBadge.svelte
src/lib/stores/: dashboard.svelte.ts  issues.svelte.ts  machines.svelte.ts  navigation.svelte.ts  projects.svelte.ts  search.svelte.ts
